--- a/leaderboard/views/views.xml
+++ b/leaderboard/views/views.xml
@@ -7,10 +7,8 @@
       <field name="arch" type="xml">
         <tree>
           <field name="name"/>
-        <!--
-          <field name="value"/>
-          <field name="value2"/>
-        -->
+          <field name="leaderboard_description"/>
+          <field name="Leaderboard_priority"/>
         </tree>
       </field>
     </record>
@@ -41,13 +39,20 @@
         web_icon="leaderboard,static/description/icon.png"/>
 
     <!-- menu categories -->
-    <menuitem name="Menu 1" id="leaderboard.menu_1" parent="leaderboard.menu_root"/>
-    <menuitem name="Menu 2" id="leaderboard.menu_2" parent="leaderboard.menu_root"/>
+    <menuitem name="Work Orders" id="leaderboard.work_orders" parent="leaderboard.menu_root"/>
+    <menuitem name="Engineering ToDo" id="leaderboard.engineering_todo" parent="leaderboard.menu_root"/>
+    <menuitem name="Configuration" id="leaderboard.configuration" parent="leaderboard.menu_root"/>
 
     <!-- actions -->
-    <menuitem name="List" id="leaderboard.menu_1_list" parent="leaderboard.menu_1"
+    <menuitem name="WO List" id="leaderboard.work_orders_list" parent="leaderboard.work_orders"
               action="leaderboard.action_window"/>
-    <menuitem name="Server to list" id="leaderboard" parent="leaderboard.menu_2"
+    <menuitem name="ToDo List" id="leaderboard.engineering_todo_list" parent="leaderboard.engineering_todo"
+              action="leaderboard.action_window"/>
+    <menuitem name="Configuration List" id="leaderboard.configuration_list" parent="leaderboard.configuration"
+              action="leaderboard.action_window"/>
+<!--
+    <menuitem name="Server to list" id="leaderboard" parent="leaderboard.engineering_todo"
               action="leaderboard.action_server"/>
+-->
   </data>
 </odoo>
