--- a/leaderboard/views/views.xml
+++ b/leaderboard/views/views.xml
@@ -8,6 +8,7 @@
         <tree>
           <field name="name"/>
           <field name="leaderboard_description"/>
+          <field name="responsible"/>
           <field name="Leaderboard_priority"/>
         </tree>
       </field>
