--- a/addons/todotask/views/views.xml
+++ b/addons/todotask/views/views.xml
@@ -1,28 +1,45 @@
 <odoo>
-  <data>
-    <!-- explicit list view definition -->
-    <!--
-    <record model="ir.ui.view" id="todotask.list">
-      <field name="name">todotask list</field>
-      <field name="model">todotask.todotask</field>
-      <field name="arch" type="xml">
-        <tree>
-          <field name="name"/>
-          <field name="value"/>
-          <field name="value2"/>
-        </tree>
-      </field>
-    </record>
-    -->
+    <data>
+    <!-- explicit list view definition -->   
+        <record model="ir.ui.view" id="todo_task_list">
+            <field name="name">todotask list</field>
+            <field name="model">todo.task</field>
+            <field name="arch" type="xml">
+                <tree>
+                  <field name="name"/>
+                  <field name="is_done"/>
+                </tree>
+            </field>
+        </record>
+      
+        <record model="ir.ui.view" id="todo_task_form">
+            <field name="name">todotask form</field>
+            <field name="model">todo.task</field>
+            <field name="arch" type="xml">
+                <form>
+                    <sheet>
+                        <group>
+                            <group>
+                                <field name="name"/>
+                            </group>
+                            <group>
+                                <field name="is_done"/>
+                            </group>
+                        </group>
+                    </sheet>
+                </form>
+            </field>
+        </record>      
+    
 
     <!-- actions opening views on models -->
-    <!--
-    <record model="ir.actions.act_window" id="todotask.action_window">
-      <field name="name">todotask window</field>
-      <field name="res_model">todotask.todotask</field>
-      <field name="view_mode">tree,form</field>
-    </record>
-    -->
+
+        <record model="ir.actions.act_window" id="todo_task_window">
+            <field name="name">todotask window</field>
+            <field name="res_model">todo.task</field>
+            <field name="view_mode">tree,form</field>
+        </record>
+
 
     <!-- server action to the one above -->
     <!--
@@ -41,20 +58,20 @@
     -->
 
     <!-- Top menu item -->
-    <!--
-    <menuitem name="todotask" id="todotask.menu_root"/>
-    -->
+
+        <menuitem name="todotask" id="menu_root"/>
+ 
     <!-- menu categories -->
-    <!--
-    <menuitem name="Menu 1" id="todotask.menu_1" parent="todotask.menu_root"/>
-    <menuitem name="Menu 2" id="todotask.menu_2" parent="todotask.menu_root"/>
-    -->
+
+        <menuitem name="Todo Manager" id="menu_todotask_manager" parent="menu_root"/>
+
     <!-- actions -->
+  
+        <menuitem name="Todo Task" id="menu_todotask_list" parent="menu_todotask_manager"
+                action="todo_task_window"/>
     <!--
-    <menuitem name="List" id="todotask.menu_1_list" parent="todotask.menu_1"
-              action="todotask.action_window"/>
     <menuitem name="Server to list" id="todotask" parent="todotask.menu_2"
               action="todotask.action_server"/>
     -->
-  </data>
+    </data>
 </odoo>
