--- a/addons/todotask/views/views.xml
+++ b/addons/todotask/views/views.xml
@@ -6,8 +6,11 @@
             <field name="model">todo.task</field>
             <field name="arch" type="xml">
                 <tree>
-                  <field name="name"/>
-                  <field name="is_done"/>
+                    <field name="name"/>
+                    <field name="is_done"/>
+                    <field name="priority"/>
+                    <field name="deadline"/>
+                    <field name="is_expired"/>
                 </tree>
             </field>
         </record>
@@ -21,9 +24,12 @@
                         <group>
                             <group>
                                 <field name="name"/>
+                                <field name="priority"/>
                             </group>
                             <group>
                                 <field name="is_done"/>
+                                <field name="deadline"/>
+                                <field name="is_expired"/>
                             </group>
                         </group>
                     </sheet>
