--- a/addons/todotask/views/views.xml
+++ b/addons/todotask/views/views.xml
@@ -1,12 +1,42 @@
 <odoo>
     <data>
-    <!-- explicit list view definition -->   
+    <!-- explicit list view definition -->  
+        <record model="ir.ui.view" id="todo_category_list">
+            <field name="name">todocategory list</field>
+            <field name="model">todo.category</field>
+            <field name="arch" type="xml">
+                <tree string= "Todo Category">
+                    <field name="name"/>
+                </tree>
+            </field>
+        </record>
+      
+        <record model="ir.ui.view" id="todo_category_form">
+            <field name="name">todocategory form</field>
+            <field name="model">todo.category</field>
+            <field name="arch" type="xml">
+                <form>
+                    <sheet>
+                        <group>
+                            <group>
+                                <field name="name"/>
+                            </group>
+                            <group>
+                            </group>
+                        </group>
+                    </sheet>
+                </form>
+            </field>
+        </record>      
+
+        
         <record model="ir.ui.view" id="todo_task_list">
             <field name="name">todotask list</field>
             <field name="model">todo.task</field>
             <field name="arch" type="xml">
-                <tree>
+                <tree string="Todo" decoration-danger="is_expired">
                     <field name="name"/>
+                    <field name="category_id"/>
                     <field name="is_done"/>
                     <field name="priority"/>
                     <field name="deadline"/>
@@ -24,6 +54,7 @@
                         <group>
                             <group>
                                 <field name="name"/>
+                                <field name="category_id"/>
                                 <field name="priority"/>
                             </group>
                             <group>
@@ -46,6 +77,11 @@
             <field name="view_mode">tree,form</field>
         </record>
 
+        <record model="ir.actions.act_window" id="todo_category_window">
+            <field name="name">todocategory window</field>
+            <field name="res_model">todo.category</field>
+            <field name="view_mode">tree,form</field>
+        </record>        
 
     <!-- server action to the one above -->
     <!--
@@ -65,16 +101,19 @@
 
     <!-- Top menu item -->
 
-        <menuitem name="todotask" id="menu_root"/>
+        <menuitem name="Todotask" id="menu_root"/>
  
     <!-- menu categories -->
 
-        <menuitem name="Todo Manager" id="menu_todotask_manager" parent="menu_root"/>
+        <menuitem name="Todo Manager" id="menu_todo_manager" parent="menu_root"/>
 
     <!-- actions -->
-  
-        <menuitem name="Todo Task" id="menu_todotask_list" parent="menu_todotask_manager"
+        
+        <menuitem name="Todo Task" id="menu_todotask_list" parent="menu_todo_manager"
                 action="todo_task_window"/>
+        
+        <menuitem name="Todo Category" id="menu_todocategory_list" parent="menu_todo_manager"
+                action="todo_category_window"/>
     <!--
     <menuitem name="Server to list" id="todotask" parent="todotask.menu_2"
               action="todotask.action_server"/>
